--- a/assets/style.css
+++ b/assets/style.css
@@ -2,12 +2,23 @@
     margin: 0;
     padding: 0;
 }
-header,
+header {
+    width: 100%;
+    height: 180px;
+    background-color: rgb(231, 195, 34);
+    color: white;
+}
+
 footer {
     width: 100%;
-    height: 120px;
-    background-color: blue;
+    height: 100px;
+    vertical-align:middle;
+    background-color: rgb(140, 25, 85);
     color: white;
+}   
+
+body {
+    background-color: bisque;
 }
 
 h1,
@@ -17,8 +28,8 @@ h2 {
 
 img {
     display: block;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -35,6 +46,6 @@ p {
   .card {
     width: 50%;
     margin: 40px auto;
-    border: 5px solid gray;
-    box-shadow: 5px 10px #888888;
+    border: 5px solid rgb(140, 25, 85);
+    box-shadow: 5px 10px #460328;
   }
